force-app/main/default/objects/Opportunity/fields/Motif_de_cl_ture__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_cl_ture__c</fullName>
    <label>Motif de clôture</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concurrent</fullName>
            </value>
            <value>
                <fullName>Prix</fullName>
            </value>
            <value>
                <fullName>Caractéristiques du produit</fullName>
            </value>
            <value>
                <fullName>Projet abandonné</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>