force-app/main/default/objects/Opportunity/fields/R_gion_Zone__c.field-meta.xml
<CustomField>
    <fullName>R_gion_Zone__c</fullName>
    <formula>TEXT(Account.R_gion__c) + &apos; &apos; +  TEXT(Account.Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Région&amp;Zone</label>
    <type>Text</type>
</CustomField>