force-app/main/default/objects/Opportunity/recordTypes/RecordTypeTest.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeTest</fullName>
    <active>true</active>
    <businessProcess>First Process</businessProcess>
    <label>RecordTypeTest</label>
</RecordType>